--- a/06-model-infer/01-lesson/06-01-lesson.Rmd
+++ b/06-model-infer/01-lesson/06-01-lesson.Rmd
@@ -54,6 +54,26 @@ railtrail_n50_lessx <- RailTrail |>
   filter(hightemp > 55) |>
   rep_sample_n(size=50, replace=FALSE, reps=50)
 
+
+set.seed(4747)
+explanatory <- rnorm(1000, 0, 5)
+response <- 40 + explanatory*2 + rnorm(1000,0,10)
+popdata <- data.frame(explanatory,response)
+
+manysamples <- popdata |>
+  rep_sample_n(size=50, reps=100)
+
+set.seed(4747)
+explanatory <- rnorm(1000, 0, 5)
+response <- 40 + explanatory*2 + rnorm(1000,0,5)
+new_popdata <- data.frame(explanatory,response)
+
+set.seed(4747)
+explanatory <- rnorm(1000, 0, 2)
+response <- 40 + explanatory*2 + rnorm(1000,0,10)
+even_newer_popdata <- data.frame(explanatory,response)
+
+
 # Hash generation helpers
 # Should ideally be loaded from the imstutorials package when it exists
 is_server_context <- function(.envir) {
@@ -356,14 +376,6 @@ tidy(ride_lm)
 Now, you will dive in to understanding how linear models vary from sample to sample.  Here two random samples from a population are plotted onto the scatterplot.  The population data (called `popdata`) already exists and is pre-loaded, along with `ggplot` and **dplyr**.
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory,response)
-```
-
-
 
 
 - Using the whole dataset, `popdata`, plot `response` vs. `explanatory`.
@@ -509,13 +521,6 @@ Rather than repeatedly calling `sample_n()`, like you did in the previous exerci
 
 The function `do()` from **dplyr** will allow you to run the `lm` call separately for each level of a variable that has been `group_by`'ed.  Here, the group variable is the sampling replicate, so each `lm` is run on a different random sample of the data.
 
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory, response)
-```
 
 
 
@@ -891,12 +896,7 @@ Next, you will work with a hypothetical population. The population will change i
 
 In order to understand the sampling distribution associated with the slope coefficient, it is valuable to visualize the impact changes in the sample and population have on the slope coefficient.  Here, changing the sample size directly impacts how variable the slope is.
 
-```{r echo=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory,response)
-```
+
 
 - From `popdata`, take random samples of `size` `50`, replicated `100` times.
 - Using `many_samples`, plot `response` vs. `explanatory`, `group`ed by `replicate`.
@@ -996,23 +996,9 @@ In order to understand the sampling distribution associated with the slope coeff
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory,response)
-
-manysamples <- popdata |>
-rep_sample_n(size=50, reps=100)
-
 ggplot(manysamples, aes(x=explanatory, y=response, group=replicate)) + 
   geom_point() + 
   geom_smooth(method="lm", se=FALSE) 
-
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,5)
-new_popdata <- data.frame(explanatory,response)
-
 ```
 
 
@@ -1062,22 +1048,9 @@ In order to understand the sampling distribution associated with the slope coeff
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory,response)
-
-manysamples <- popdata |>
-rep_sample_n(size=50, reps=100)
-
 ggplot(manysamples, aes(x=explanatory, y=response, group=replicate)) + 
 geom_point() + xlim(-17,17) + 
 geom_smooth(method="lm", se=FALSE) 
-
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 2)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-even_newer_popdata <- data.frame(explanatory,response)
 ```
 
 
@@ -1122,28 +1095,19 @@ ggplot(many_samples, aes(x = explanatory, y = response, group = replicate)) +
 
 
 
-The last three exercises have demonstrated how the variability in the slope coefficient can change based on changes to the population and the sample.  Which of the following combinations *increases* the variability in the sampling distribution of the slope coefficient?
+The last three exercises have demonstrated how the variability in the slope coefficient can change based on changes to the population and the sample.  
 
 
-```{r 111, exercise=TRUE}
-
+```{r option-111, echo=FALSE}
+question("Which of the following combinations *increases* the variability in the sampling distribution of the slope coefficient?",
+  answer("Bigger sample size, larger variability around the line, increased range of explanatory variable", message="No, larger sample sizes and increased variability in the explanatory variable both lead to less variability of the slope coefficient."),
+  answer("Bigger sample size, larger variability around the line, decreased range of explanatory variable.", message="No, larger sample sizes leads to less variability of the slope coefficient."),
+  answer("Smaller sample size, smaller variability around the line, increased range of explanatory variable.", message="No, less variability around the line and increased variability in the explanatory variable both lead to less variability of the slope coefficient."),
+  answer("Smaller sample size, larger variability around the line, decreased range of explanatory variable.", correct=TRUE, message="Right!  Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient."),
+  answer("Smaller sample size, smaller variability around the line, decreased range of explanatory variable.", message="No, less variability around the line leads to less variability of the slope coefficient."),
+  allow_retry = TRUE
+)
 ```
-
-
-
-```{r 111-hint}
-Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient.
-```
-
-
-```{r 111-solution}
-- Bigger sample size, larger variability around the line, increased range of explanatory variable.
-- Bigger sample size, larger variability around the line, decreased range of explanatory variable.
-- Smaller sample size, smaller variability around the line, increased range of explanatory variable.
-- Smaller sample size, larger variability around the line, decreased range of explanatory variable.
-- Smaller sample size, smaller variability around the line, decreased range of explanatory variable.
-```
-
 
 ## Congratulations!
 
